5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1674_1872.log
== TEST (2019-05-02 03:48:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite uma valor para x:"))
y = float(input("Digite uma valor para y:"))
if((x==0)and(y==0)):
	print("Origem")
elif(x==0):
	print("Eixo y")
elif(y==0):
	print("Eixo x")
elif((x>o)and(y>0)):
	print("Q1")
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")
else:
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    elif((x>o)and(y>0)):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 03:48:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite uma valor para x:"))
y = float(input("Digite uma valor para y:"))
if((x==0)and(y==0)):
	print("Origem")
elif(x==0):
	print("Eixo y")
elif(y==0):
	print("Eixo x")
elif((x>o)and(y>0)):
	print("Q1")
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")
else:
	print("Q4")
-- EXECUTION TIME:
0.178015
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 10, in <module>
    elif((x>o)and(y>0)):
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 03:49:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite uma valor para x:"))
y = float(input("Digite uma valor para y:"))
if((x==0)and(y==0)):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")
elif((x>o)and(y>0)):
	print("Q1")
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")
else:
	print("Q4")
-- EXECUTION TIME:
0.151643
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 10, in <module>
    elif((x>o)and(y>0)):
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:49:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite uma valor para x:"))
y = float(input("Digite uma valor para y:"))
if((x==0)and(y==0)):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")
elif((x>o)and(y>0)):
	print("Q1")
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")
else:
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    elif((x>o)and(y>0)):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 03:50:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite uma valor para x:"))
y = float(input("Digite uma valor para y:"))
if((x==0)and(y==0)):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")
elif((x>0)and(y>0)):
	print("Q1")
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")
else:
	print("Q4")
-- EXECUTION TIME:
0.202551
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
